fix(vuetify, VBtn): reset button letter-spacing

--- a/src/assets/styles/generic/_vuetify.scss
+++ b/src/assets/styles/generic/_vuetify.scss
@@ -29,6 +29,10 @@ $font-family: 'Exo 2', sans-serif;
   }
 }
 
+.v-btn {
+  letter-spacing: normal;
+}
+
 /**
  * Vuetify container padding.
  */
